# EduTrackAPI

./: .flake8  .gitignore  CODE_REVIEW.md  Dockerfile  README.md  Taskfile.yaml  alembic.ini  bandit.yaml  docker-compose.yml  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_multiple_roles_support.py  0003_migrate_to_timezone_aware_datetime.py  0004_add_new_features.py  0005_move_profile_to_separate_table.py
scripts/: create_admin.py  load_demo.sh  test_graceful_shutdown.sh  test_password_reset.sh
scripts/demo/: README.md  demo.sql  demo_smtp.py
src/edutrack/: __init__.py
src/edutrack/application/: auth.py  classes.py  classmates.py  direct_messages.py  grades.py  health.py  interim_assessment.py  lessons.py  messages.py  news.py  password_reset.py  performance.py  profile.py  schools.py  students.py  subjects.py
src/edutrack/config/: settings.py
src/edutrack/domain/: __init__.py  repositories.py
src/edutrack/infrastructure/: __init__.py
src/edutrack/infrastructure/cache/: __init__.py  redis.py
src/edutrack/infrastructure/db/: __init__.py  base.py  database.py  models.py
src/edutrack/infrastructure/email/: __init__.py  sender.py
src/edutrack/infrastructure/queue/: __init__.py  publisher.py
src/edutrack/notifier/: __init__.py  main.py
src/edutrack/presentation/: __init__.py
tests/: conftest.py  test_email_and_services.py  test_new_features.py  test_services.py
tests/helpers/: __init__.py  assertions.py  factories.py  mocks.py  patches.py
(+12 files in other folders)
