[tool.poetry]
name = "edutrack-api"
version = "0.1.0"
description = "Production-ready backend for school e-diary with FastAPI, PostgreSQL, Redis, RabbitMQ."
authors = ["EduTrack Team <noreply@edutrack.local>"]
readme = "README.md"
packages = [{ include = "edutrack", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
redis = "^5.0.7"
aio-pika = "^9.4.1"
aiosmtplib = "^3.0.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
email-validator = "^2.2.0"
httpx = "^0.27.0"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
